fix anchor overlap

--- a/src/components/Icon/style.module.scss
+++ b/src/components/Icon/style.module.scss
@@ -1,5 +1,6 @@
 .icon {
   flex-shrink: 0;
+  display: block;
 }
 
 .arrowUp {
