--- a/src/components/MoonBar/MoonBarMoons/style.module.scss
+++ b/src/components/MoonBar/MoonBarMoons/style.module.scss
@@ -5,7 +5,7 @@
   height: calc(var(--square-diagonal) * 5);
   left: calc(var(--sidebar-width) - var(--square-diagonal-half) - (var(--moon-size) / 2));
   top: calc((var(--square-diagonal) / 2) - (var(--moon-size) / 2));
-  z-index: 5;
+  z-index: 3;
 }
 
 .moon {
