--- a/src/components/NavIcon/style.module.scss
+++ b/src/components/NavIcon/style.module.scss
@@ -1,7 +1,8 @@
 .nav {
-  display: block;
+  display: flex;
   cursor: pointer;
   color: var(--border);
+  text-decoration: none;
 
   &.active {
     color: white;
